feature: align to 9.6.0
