# {{cookiecutter.repo_name}}/docs/swagger/openapi.json
@@ -1,176 +1,369 @@
 {
-    "openapi": "3.1.0",
-    "info": {
-        "title": "AWS Lambda Handler Cookbook - Orders Service",
-        "version": "1.0.0"
-    },
-    "servers": [
-        {
-            "url": "/prod"
-        }
-    ],
-    "paths": {
-        "/api/orders": {
-            "post": {
-                "tags": [
-                    "CRUD"
-                ],
-                "summary": "Create an order",
-                "description": "Create an order identified by the body payload",
-                "operationId": "handle_create_order_api_orders_post",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/CreateOrderRequest"
-                            }
-                        }
-                    },
-                    "required": true
-                },
-                "responses": {
-                    "422": {
-                        "description": "Validation Error",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/HTTPValidationError"
-                                }
-                            }
-                        }
-                    },
-                    "200": {
-                        "description": "The created order",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/CreateOrderOutput"
-                                }
-                            }
-                        }
-                    },
-                    "501": {
-                        "description": "Internal server error",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/InternalServerErrorOutput"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    },
-    "components": {
-        "schemas": {
-            "CreateOrderOutput": {
-                "properties": {
-                    "name": {
-                        "type": "string",
-                        "maxLength": 20,
-                        "minLength": 1,
-                        "title": "Name",
-                        "description": "Customer name"
-                    },
-                    "item_count": {
-                        "type": "integer",
-                        "title": "Item Count",
-                        "description": "Amount of items in order"
-                    },
-                    "id": {
-                        "type": "string",
-                        "maxLength": 36,
-                        "minLength": 36,
-                        "title": "Id",
-                        "description": "Order ID as UUID"
-                    }
-                },
-                "type": "object",
-                "required": [
-                    "name",
-                    "item_count",
-                    "id"
-                ],
-                "title": "CreateOrderOutput"
-            },
-            "CreateOrderRequest": {
-                "properties": {
-                    "customer_name": {
-                        "type": "string",
-                        "maxLength": 20,
-                        "minLength": 1,
-                        "title": "Customer Name",
-                        "description": "Customer name"
-                    },
-                    "order_item_count": {
-                        "type": "integer",
-                        "title": "Order Item Count",
-                        "description": "Amount of items in order"
-                    }
-                },
-                "type": "object",
-                "required": [
-                    "customer_name",
-                    "order_item_count"
-                ],
-                "title": "CreateOrderRequest"
-            },
-            "HTTPValidationError": {
-                "properties": {
-                    "detail": {
-                        "items": {
-                            "$ref": "#/components/schemas/ValidationError"
-                        },
-                        "type": "array",
-                        "title": "Detail"
-                    }
-                },
-                "type": "object",
-                "title": "HTTPValidationError"
-            },
-            "InternalServerErrorOutput": {
-                "properties": {
-                    "error": {
-                        "type": "string",
-                        "title": "Error",
-                        "description": "Error description",
-                        "default": "internal server error"
-                    }
-                },
-                "type": "object",
-                "title": "InternalServerErrorOutput"
-            },
-            "ValidationError": {
-                "properties": {
-                    "loc": {
-                        "items": {
-                            "anyOf": [
-                                {
-                                    "type": "string"
-                                },
-                                {
-                                    "type": "integer"
-                                }
-                            ]
-                        },
-                        "type": "array",
-                        "title": "Location"
-                    },
-                    "type": {
-                        "type": "string",
-                        "title": "Error Type"
-                    }
-                },
-                "type": "object",
-                "required": [
-                    "loc",
-                    "msg",
-                    "type"
-                ],
-                "title": "ValidationError"
-            }
-        }
+  "openapi": "3.1.0",
+  "info": {
+    "title": "AWS Lambda Handler Cookbook - Orders Service",
+    "version": "1.0.0"
+  },
+  "servers": [
+    {
+      "url": "/"
     }
+  ],
+  "paths": {
+    "/api/orders/{order_id}": {
+      "get": {
+        "tags": [
+          "CRUD"
+        ],
+        "summary": "Get an order",
+        "description": "Get an order by its ID",
+        "operationId": "handle_get_order_api_orders__order_id__get",
+        "parameters": [
+          {
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Order Id"
+            },
+            "name": "order_id",
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "The requested order",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetOrderOutput"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Order not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OrderNotFoundOutput"
+                }
+              }
+            }
+          },
+          "501": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalServerErrorOutput"
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "CRUD"
+        ],
+        "summary": "Delete an order",
+        "description": "Delete an order by its ID",
+        "operationId": "handle_delete_order_api_orders__order_id__delete",
+        "parameters": [
+          {
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Order Id"
+            },
+            "name": "order_id",
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "Order deleted successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DeleteOrderOutput"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Order not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OrderNotFoundOutput"
+                }
+              }
+            }
+          },
+          "501": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalServerErrorOutput"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/orders": {
+      "post": {
+        "tags": [
+          "CRUD"
+        ],
+        "summary": "Create an order",
+        "description": "Create an order identified by the body payload",
+        "operationId": "handle_create_order_api_orders_post",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateOrderRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "The created order",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/CreateOrderOutput"
+                }
+              }
+            }
+          },
+          "501": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InternalServerErrorOutput"
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "CreateOrderOutput": {
+        "properties": {
+          "name": {
+            "type": "string",
+            "maxLength": 20,
+            "minLength": 1,
+            "title": "Name",
+            "description": "Customer name"
+          },
+          "item_count": {
+            "type": "integer",
+            "title": "Item Count",
+            "description": "Amount of items in order"
+          },
+          "id": {
+            "type": "string",
+            "maxLength": 36,
+            "minLength": 36,
+            "title": "Id",
+            "description": "Order ID as UUID"
+          }
+        },
+        "type": "object",
+        "required": [
+          "name",
+          "item_count",
+          "id"
+        ],
+        "title": "CreateOrderOutput"
+      },
+      "CreateOrderRequest": {
+        "properties": {
+          "customer_name": {
+            "type": "string",
+            "maxLength": 20,
+            "minLength": 1,
+            "title": "Customer Name",
+            "description": "Customer name"
+          },
+          "order_item_count": {
+            "type": "integer",
+            "title": "Order Item Count",
+            "description": "Amount of items in order"
+          }
+        },
+        "type": "object",
+        "required": [
+          "customer_name",
+          "order_item_count"
+        ],
+        "title": "CreateOrderRequest"
+      },
+      "DeleteOrderOutput": {
+        "properties": {
+          "order_id": {
+            "type": "string",
+            "title": "Order Id",
+            "description": "The deleted order ID"
+          }
+        },
+        "type": "object",
+        "required": [
+          "order_id"
+        ],
+        "title": "DeleteOrderOutput"
+      },
+      "GetOrderOutput": {
+        "properties": {
+          "name": {
+            "type": "string",
+            "maxLength": 20,
+            "minLength": 1,
+            "title": "Name",
+            "description": "Customer name"
+          },
+          "item_count": {
+            "type": "integer",
+            "title": "Item Count",
+            "description": "Amount of items in order"
+          },
+          "id": {
+            "type": "string",
+            "maxLength": 36,
+            "minLength": 36,
+            "title": "Id",
+            "description": "Order ID as UUID"
+          }
+        },
+        "type": "object",
+        "required": [
+          "name",
+          "item_count",
+          "id"
+        ],
+        "title": "GetOrderOutput"
+      },
+      "HTTPValidationError": {
+        "properties": {
+          "detail": {
+            "items": {
+              "$ref": "#/components/schemas/ValidationError"
+            },
+            "type": "array",
+            "title": "Detail"
+          }
+        },
+        "type": "object",
+        "title": "HTTPValidationError"
+      },
+      "InternalServerErrorOutput": {
+        "properties": {
+          "error": {
+            "type": "string",
+            "title": "Error",
+            "description": "Error description",
+            "default": "internal server error"
+          }
+        },
+        "type": "object",
+        "title": "InternalServerErrorOutput"
+      },
+      "OrderNotFoundOutput": {
+        "properties": {
+          "error": {
+            "type": "string",
+            "title": "Error",
+            "description": "Error description",
+            "default": "order was not found"
+          }
+        },
+        "type": "object",
+        "title": "OrderNotFoundOutput"
+      },
+      "ValidationError": {
+        "properties": {
+          "loc": {
+            "items": {
+              "anyOf": [
+                {
+                  "type": "string"
+                },
+                {
+                  "type": "integer"
+                }
+              ]
+            },
+            "type": "array",
+            "title": "Location"
+          },
+          "type": {
+            "type": "string",
+            "title": "Error Type"
+          }
+        },
+        "type": "object",
+        "required": [
+          "loc",
+          "msg",
+          "type"
+        ],
+        "title": "ValidationError"
+      },
+      "ResponseValidationError": {
+        "properties": {
+          "detail": {
+            "items": {
+              "$ref": "#/components/schemas/ValidationError"
+            },
+            "type": "array",
+            "title": "Detail"
+          }
+        },
+        "type": "object",
+        "title": "ResponseValidationError"
+      }
+    }
+  }
 }
